implement resilience4j-retry

--- a/GithubRepoExplorerBackend/src/main/resources/application.yml
+++ b/GithubRepoExplorerBackend/src/main/resources/application.yml
@@ -1,4 +1,9 @@
 resilience4j:
+  retry:
+    instances:
+      githubSearch:
+        maxRetryAttempts: 3
+        waitDuration: 500ms
   circuitbreaker:
     instances:
       myService:
